8/3/2007
    Version 0.9.0  (svn ver 64) released

8/4/2007 --

	* add pixel scale stuff to -i command output.